<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.emmanuelmess.tacticaldefence.game.render.RenderGameMenuActivity
        android:id="@+id/view_game_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/battle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/dark_green"
        android:onClick="startGame"
        android:text="@string/battle"
        android:padding="5dp"
        android:translationZ="3dp"/>

    <Button
        android:id="@+id/upgrades_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/dark_green"
        android:onClick="showUpgrades"
        android:text="@string/upgrades"
        android:padding="5dp"
        android:translationZ="3dp"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc_about"
        android:onClick="onClickAbout"
        android:src="@drawable/ic_action_about"
        android:background="@android:color/transparent"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <TextView
        android:id="@+id/gamePlayTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/loading"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/upgrades_button"
        android:layout_alignLeft="@+id/battle_button"
        android:layout_alignStart="@+id/battle_button"
        android:layout_alignRight="@+id/battle_button"
        android:layout_alignEnd="@+id/battle_button"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/games_controller_white"
            android:onClick="onClickGames"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/frameLayout"
            android:layout_alignStart="@+id/frameLayout"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/frameLayout"/>

        <Button
            android:id="@+id/explanationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:onClick="onExplanationsSelected"
            android:textSize="15sp"
            android:text="\?"
            tools:ignore="HardcodedText"
            android:padding="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/imageButton"
            android:layout_toStartOf="@+id/imageButton"
            android:translationZ="3dp"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/gps_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>